--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -18,7 +18,7 @@
                                 {{ user.name }}
                             </h3>
                             <h4 id="username">
-                                @{{ user.username }}
+                                {{ user.username }}
                             </h4>
                         </div>
                     </div>
