--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -29,7 +29,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h5 class="text-muted" id="username">
-                                @{{ user.username }}
+                                {{ user.username }}
                             </h5>
                         </div>
                     </div>
