--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -7,7 +7,7 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-md-12" id="user-info">
-                        { post.author.name } @{ post.author.username }
+                        { post.author.name } { post.author.username }
                     </div>
                 </div>
                 <div class="row">
