added create post form

--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -37,9 +37,11 @@
     {% endfor %}
 
 	<div class="row">
-		<div class="col-md-12">
+        <div class="col-md-3">
+        </div>
+		<div class="col-md-6">
 			<nav>
-				<ul class="pagination">
+				<ul class="pagination justify-content-center">
 					<li class="page-item">
 						<a class="page-link" href="#">Previous</a>
 					</li>
@@ -64,6 +66,8 @@
 				</ul>
 			</nav>
 		</div>
+        <div class="col-md-3">
+        </div>
 	</div>
 </div>
 
