--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -5,6 +5,29 @@
     <div id=message-view>
     </div>
 
+    <div id=addpost-view>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-6">
+                    <form role="form">
+                        <div class="form-group">
+                            <textarea class="form-control" id="addpost-content" placeholder="Say your thing" rows="3"></textarea>
+                        </div> 
+                        <button type="submit" class="btn btn-primary float-right">
+                            Post!
+                        </button>
+                    </form>
+                </div>
+                <div class="col-md-3">
+                </div>
+            </div>
+        </div>
+
+    </div>
+
     <div id="posts-view">
         {% include "network/posts.html" with posts=posts %}
     </div>
