--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -3,8 +3,14 @@
 
 {% block body %}
     <div id=message-view>
+        {% if message %}
+            <div class="alert alert-info justify-content-center" role="alert">
+                {{ message }}
+             </div>
+        {% endif %}
     </div>
 
+    {% if user.is_authenticated %}
     <div id=addpost-view>
 
         <div class="container-fluid">
@@ -12,13 +18,12 @@
                 <div class="col-md-3">
                 </div>
                 <div class="col-md-6">
-                    <form role="form">
+                    <form role="form" action="{% url 'new_post' %}" method="post">
+                        {% csrf_token %}
                         <div class="form-group">
-                            <textarea class="form-control" id="addpost-content" placeholder="Say your thing" rows="3"></textarea>
-                        </div> 
-                        <button type="submit" class="btn btn-primary float-right">
-                            Post!
-                        </button>
+                                <textarea class="form-control" name="content" placeholder="Say your thing" rows="3">{% if content %}{{ content }}{% endif %}</textarea>
+                        </div>
+                        <input class="btn btn-primary float-right" type="submit" value="Post!">
                     </form>
                 </div>
                 <div class="col-md-3">
@@ -27,6 +32,7 @@
         </div>
 
     </div>
+    {% endif %}
 
     <div id="posts-view">
         {% include "network/posts.html" with posts=posts %}
