--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -14,7 +14,7 @@
             <input class="form-control" autofocus type="text" name="username" placeholder="Username">
         </div>
         <div class="form-group">
-            <input class="form-control" autofocus type="text" name="name" placeholder="Name">
+            <input class="form-control" type="text" name="name" placeholder="Name">
         </div>
         <div class="form-group">
             <input class="form-control" type="email" name="email" placeholder="Email Address">
