--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -7,7 +7,7 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-md-12" id="user-info">
-                        <strong>{{ post.author_name }}</strong> <span class="text-muted">{{ post.author_username }}</span>
+                        <strong>{{ post.author_name }}</strong> <a href="{% url 'user' profile_id=post.author_id %}" class="text-muted">{{ post.author_username }}</a>
                     </div>
                 </div>
                 <div class="row">
