--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -36,6 +36,7 @@
 
     <div id="posts-view">
     </div>
+    <input type="hidden" value="{{ page_number }}" id="page-number">
 {% endblock %}
 
 {% block script %}
