--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -7,7 +7,7 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-md-12" id="user-info">
-                        <strong>{{ post.author_name }}</strong> <a href="{% url 'user' profile_id=post.author_id %}" class="text-muted">{{ post.author_username }}</a>
+                        <strong>{{ post.author_name }}</strong> <a href="{% url 'user' profile_id=post.author_id %}" class="text-muted">@{{ post.author_name }}</a>
                     </div>
                 </div>
                 <div class="row">
@@ -42,27 +42,19 @@
 		<div class="col-md-6">
 			<nav>
 				<ul class="pagination justify-content-center">
-					<li class="page-item">
-						<a class="page-link" href="#">Previous</a>
-					</li>
-					<li class="page-item">
-						<a class="page-link" href="#">1</a>
-					</li>
-					<li class="page-item">
-						<a class="page-link" href="#">2</a>
-					</li>
-					<li class="page-item">
-						<a class="page-link" href="#">3</a>
-					</li>
-					<li class="page-item">
-						<a class="page-link" href="#">4</a>
-					</li>
-					<li class="page-item">
-						<a class="page-link" href="#">5</a>
-					</li>
-					<li class="page-item">
-						<a class="page-link" href="#">Next</a>
-					</li>
+                    {% if posts.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ posts.previous_page_number }}">Previous</a>
+                        </li>
+                    {% endif %}
+                    <li class="page-item disabled">
+                        <p class="page-link">Page {{ posts.number }} of {{ posts.paginator.num_pages }}</p>
+                    </li>
+					{% if posts.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ posts.next_page_number }}">Next</a>
+                        </li>
+                    {% endif %}
 				</ul>
 			</nav>
 		</div>
