--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -10,32 +10,10 @@
         {% endif %}
     </div>
 
-    {% if user.is_authenticated %}
-    <div id=addpost-view>
-
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-3">
-                </div>
-                <div class="col-md-6">
-                    <form role="form" action="{% url 'new_post' %}" method="post">
-                        {% csrf_token %}
-                        <div class="form-group">
-                                <textarea class="form-control" name="content" placeholder="Say your thing" rows="3">{% if content %}{{ content }}{% endif %}</textarea>
-                        </div>
-                        <input class="btn btn-primary float-right" type="submit" value="Post!">
-                    </form>
-                </div>
-                <div class="col-md-3">
-                </div>
-            </div>
-        </div>
-
-    </div>
-    {% endif %}
-
     <div id="posts-view">
     </div>
+
+    <input type="hidden" value="{{ page_number }}" id="page-number">
 {% endblock %}
 
 {% block script %}
