added edit post and (un)like functionality

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -35,8 +35,8 @@
     {% endif %}
 
     <div id="posts-view">
+        {% include "network/posts.html" with posts=posts %}
     </div>
-    <input type="hidden" value="{{ page_number }}" id="page-number">
 {% endblock %}
 
 {% block script %}
