--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -9,7 +9,9 @@
              </div>
         {% endif %}
     </div>
-
+    <div class="text-center">
+        <h1>People you follow</h1>
+    </div>
     <div id="posts-view">
         {% include "network/posts.html" with posts=posts %}
     </div>
