--- a/network/templates/network/posts.html
+++ b/network/templates/network/posts.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-3">
             </div>
-            <div class="col-md-6 post">
+            <div class="col-md-6 post rounded" >
                 <div class="row">
                     <div class="col-md-12" id="user-info">
                         <strong>{{ post.author_name }}</strong> <a href="{% url 'user' profile_id=post.author_id %}" class="text-muted">{{ post.author_username }}</a>
