--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -9,10 +9,13 @@
              </div>
         {% endif %}
     </div>
+    <div class="text-center">
+        <h1>Network</h1>
+    </div>
+
 
     {% if user.is_authenticated %}
     <div id=addpost-view>
-
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
