--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -13,13 +13,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="row">
-                        <div class="col-md-12 text-right">
-                            {% if user.is_authenticated and user.id != profile_info.id  %}
-                                <button type="button" class="btn btn-info" id="follow-btn">
-                                    (Un)Follow
-                                </button>
-                            {% endif %}
-                        </div>
+                        
                     </div>
                     <div class="row">
                         <div class="col-md-12">
@@ -35,9 +29,16 @@
                             </h5>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-12" id="follows">
+                    <div class="row align-items-center">
+                        <div class="col-md-6" id="follows">
                             Following: {{ profile_info.following }} - Followers: {{ profile_info.followers }}
+                        </div>
+                        <div class="col-md-6 text-right">
+                            {% if user.is_authenticated and user.id != profile_info.id  %}
+                                <button type="button" class="btn btn-info" id="follow-btn">
+                                    (Un)Follow
+                                </button>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
